Refactor and trim-down UT related stuff